k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitstronaut
  namespace: gitstronaut
spec:
  selector:
    app: gitstronaut
  ports:
    - port: 80
      targetPort: 3000
