k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitstronaut
  namespace: gitstronaut
spec:
  ingressClassName: traefik
  rules:
    - host: gitstronaut.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitstronaut
                port:
                  number: 80
